--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -1,10 +1,8 @@
 %h1= t('site.title')
 
-- @sections.each do |section|
+- (@sections - Array(@sections.first)).each do |section|
   %h3= section.name
   - unless section.favorites.blank?
     %ul
       - section.favorites.each do |faves|
-        
         %li=favorite_link_to(faves)
-    
