--- a/app/views/sections/_form.html.haml
+++ b/app/views/sections/_form.html.haml
@@ -7,6 +7,6 @@
   %p
     = f.label :children_of
     %br
-    = f.select :children_of, @user.sections.delete_if { |o| o.id == @section.id }.collect { |a| [a.name, a.id] }
+    = f.select :children_of, nested_set_options_for_select(current_user.sections, :exclude => @section)
   %p
     = f.submit "Submit"
