--- a/app/views/sections/index.html.haml
+++ b/app/views/sections/index.html.haml
@@ -6,10 +6,12 @@
   #sections
     #bubbles
       = bubbles_display(@sections)
-  = will_paginate(@sections)
 - else
   %p There are no sections to show yet.
 %hr.clear
 = link_to 'New section', new_section_path
 
 %hr.clear
+
+#results
+  %p
