--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -1,11 +1,21 @@
-html, h1, h2, h3, h4, h5, h6, blockquote, code {
+html, body, h1, h2, h3, h4, h5, h6, blockquote, code {
 	margin: 0;
 	padding: 0;
 }
 
 body {
-	font: x-large/110% arial, verdana, georgia, "sans-serif", helvetica
-	line-height: 130%;
+	font-family: arial, verdana, georgia, "sans-serif", helvetica
+	font-size: 16px;
+	line-height: 160%;
+}
+
+h3 {
+	padding: 4px;
+	margin: 2px 0 0 0;
+}
+h3 a {
+	margin-left: 10px;
+	text-decoration: none;
 }
 
 a.rounded, .button {
@@ -18,7 +28,19 @@ a.rounded, .button {
   display: -moz-inline-box;
   display: inline-block;
   overflow: visible; /* IE6 form button fix */
+  padding: 2px 4px;
+  margin: 2px 0;
+  border: 1px solid #e09;
+  color: #333;
+  background: #fe8;
+  font-size: 12px;
 }
+
+a.rounded:hover {
+	background: #5a7db1;
+	color: #eef;
+}
+
 .button {
   color: #000;
   background-color: #acc;
@@ -28,3 +50,6 @@ a.rounded, .button {
   background-color: #cee;
 }
 
+#toolbar {
+	padding: 10px;
+}
