--- a/app/views/favorites/_form.html.haml
+++ b/app/views/favorites/_form.html.haml
@@ -1,26 +1,29 @@
-%h2= nested_set_full_outline(@section, :controller => 'sections')
+- content_for(:head) do
+  = stylesheet_link_tag 'forms'
+
+%h3= nested_set_full_outline(@section, :controller => 'sections')
 
 - form_for([@section, favorite]) do |f|
   = f.error_messages
-  %p
+  %p.field
     = f.label :name
     %br
     = f.text_field :name
-  %p
+  %p.field
     = f.label :description
     %br
     = f.text_field :description
-  %p
+  %p.field
     = f.label :url
     %br
     = f.text_field :url
-  %p
+  %p.field
     = f.label :state
     %br
     = f.check_box :state
-  %p
+  %p.field
     = f.label :section_id
     %br/
-    = f.select :section_id, nested_set_options_for_select(current_user.sections), :include_blank => true
+    = f.select :section_id, nested_set_options_for_select(current_user.sections)
   %p
     = f.submit "Submit"
