--- a/app/views/favorites/new.html.haml
+++ b/app/views/favorites/new.html.haml
@@ -1,4 +1,4 @@
 %h2 New favorite
 = render "form", :favorite => @favorite
 %ul
-  %li= link_to 'Back', section_favorites_path(@section)
+  %li= link_to 'Back', section_path(@section)
