--- a/app/views/sections/_form.html.haml
+++ b/app/views/sections/_form.html.haml
@@ -1,10 +1,13 @@
+- content_for(:head) do
+  = stylesheet_link_tag 'forms'
+
 - form_for([@user, @section]) do |f|
   = f.error_messages
-  %p
+  %p.field
     = f.label :name
     %br
     = f.text_field :name
-  %p
+  %p.field
     = f.label :children_of
     %br
     = f.select :children_of, nested_set_options_for_select(current_user.sections, :exclude => @section)
