--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -4,9 +4,18 @@ html, body, h1, h2, h3, h4, h5, h6, blockquote, code {
 }
 
 body {
-	font-family: arial, verdana, georgia, "sans-serif", helvetica
+	font-family: "sans-serif", arial, verdana, georgia, helvetica
 	font-size: 16px;
 	line-height: 160%;
+}
+
+a {
+	color: #3361d7;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 h1 {
@@ -17,8 +26,9 @@ h1 {
 
 h2 {
 	font-size: larger;
-	margin: 8px 4px;
+	margin: 8px 2px;
 	background: #2579ba;
+	color: #fff;
 	padding: 8px;
 }
 
@@ -26,6 +36,7 @@ h2 em {
 	font-size: small;
 	font-style: normal;
 	float: right;
+	color: #f7fbb1;
 }
 
 h2 a {
@@ -37,6 +48,10 @@ h2 a {
 .box {
 	width: 300px;
 	float: left;
+}
+
+h3 {
+	
 }
 
 a.rounded, .button {
@@ -91,4 +106,8 @@ a.rounded:hover {
 
 #toolbar a:hover {
 	text-decoration: underline;
+}
+
+#container {
+	margin: 0 4px;
 }
