--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -6,11 +6,11 @@ form p {
 	clear: both;
 }
 
-form p.field input, select, textarea {
+form .field input, select, textarea {
 	padding: 4px;
 }
 
-form p.field input:focus, form p.field textarea:focus {
+form .field input:focus, form p.field textarea:focus {
 	border: 2px solid #3361d7;
 }
 
