--- a/app/views/sections/show.html.haml
+++ b/app/views/sections/show.html.haml
@@ -2,7 +2,7 @@
   = javascript_include_tag :in_place_editing, 'jbreadcrumb/jbreadcrumb', 'jbreadcrumb/easing'
   = stylesheet_link_tag 'jbreadcrumb/base', 'jbreadcrumb/breadcrumb'
 
-= nested_set_breadcrumb(@section, :controller => 'sections', :in_place_editing => true)
+= nested_set_breadcrumb(@section, :controller => 'sections')
 
 - javascript_tag do
   $("#breadCrumb").jBreadCrumb({easing:'swing'});
